<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".instructions.ThreeByThreeBeginnerFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_by_three_beginner_title"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:background="@drawable/title_background"
                android:padding="5dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_margin="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_by_three_beginner_step1_title"
                android:textSize="18dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_by_three_beginner_step1_paragraph"
                android:textSize="18dp"
                android:fontFamily="sans-serif"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_by_three_beginner_step2_title"
                android:textSize="18dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_margin="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_by_three_beginner_step2_paragraph"
                android:textSize="18dp"
                android:fontFamily="sans-serif"
                android:layout_margin="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_by_three_beginner_step3_title"
                android:textSize="18dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_margin="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_by_three_beginner_step3_paragraph"
                android:textSize="18dp"
                android:fontFamily="sans-serif"
                android:layout_margin="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_by_three_beginner_step4_title"
                android:textSize="18dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_margin="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_by_three_beginner_step4_paragraph"
                android:textSize="18dp"
                android:fontFamily="sans-serif"
                android:layout_margin="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_by_three_beginner_step5_title"
                android:textSize="18dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_margin="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_by_three_beginner_step5_paragraph"
                android:textSize="18dp"
                android:fontFamily="sans-serif"
                android:layout_margin="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_by_three_beginner_step6_title"
                android:textSize="18dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_margin="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_by_three_beginner_step6_paragraph"
                android:textSize="18dp"
                android:fontFamily="sans-serif"
                android:layout_margin="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_by_three_beginner_step7_title"
                android:textSize="18dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_margin="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_by_three_beginner_step7_paragraph"
                android:textSize="18dp"
                android:fontFamily="sans-serif"
                android:layout_margin="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_by_three_beginner_step8_title"
                android:textSize="18dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_margin="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three_by_three_beginner_step8_paragraph"
                android:textSize="18dp"
                android:fontFamily="sans-serif"
                android:layout_margin="10dp" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>