<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".instructions.IntroductionFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introduction_to_cubing_title"
                android:textSize="18dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_margin="10dp"
                style="@style/TEXT_ON_PRIMARY" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cubing_basics_title"
                android:textSize="18dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_margin="10dp"
                style="@style/TEXT_ON_PRIMARY" />

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cubing_basics_paragraph"
            android:textSize="18dp"
            android:fontFamily="sans-serif"
            android:layout_margin="10dp"
            style="@style/TEXT_ON_PRIMARY" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/speedcubing_title"
                android:textSize="18dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_margin="10dp"
                style="@style/TEXT_ON_PRIMARY" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/speedcubing_paragraph"
                android:textSize="18dp"
                android:fontFamily="sans-serif"
                android:layout_margin="10dp"
                style="@style/TEXT_ON_PRIMARY" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notation_systems_title"
                android:textSize="18dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_margin="10dp"
                style="@style/TEXT_ON_PRIMARY" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notation_systems_paragraph"
                android:textSize="18dp"
                android:fontFamily="sans-serif"
                android:layout_margin="10dp"
                style="@style/TEXT_ON_PRIMARY" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timing_and_penalties_title"
                android:textSize="18dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_margin="10dp"
                style="@style/TEXT_ON_PRIMARY" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timing_and_penalties_paragraph"
                android:textSize="18dp"
                android:fontFamily="sans-serif"
                android:layout_margin="10dp"
                style="@style/TEXT_ON_PRIMARY" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>